# ai-classification-cyber-attack

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  train.py  train_all.ps1  train_all_imbalance.ps1  train_remaining.ps1
.github/workflows/: delivery-preflight.yml
.streamlit/: config.toml
api/: main.py
configs/splits/: source_holdout_v1.json  source_holdout_v2_70_30.json  source_holdout_v3_full_70_30.json
dashboard/: _shared.py  _style.py  app.py
dashboard/pages/: 01_Dataset_Overview.py  02_EDA.py  03_Model_Performance.py  04_Model_Comparison.py  05_SHAP.py  06_Predict_New_CSV.py
data/sample/: synthetic_cicids.csv
docs/: architecture.md  bonus_features_report.html  dashboard_guide.md  dataset_preparation.md  dgx_training_handoff.md  evaluation.md  feature_mapping.md  fn_aware_training_results_20260706.md  imbalance_experiments.md  imbalance_work_summary_th.md  implementation_log.md  inference_workflow.md  ml_pipeline.md  shap_explanation.md  source_holdout.md  testing.md  training_guide.md  training_workflow.md
notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  README.md
results/: champion.json  dgx_preflight_gpu_local.json  dgx_preflight_local.json
results/latest/: before_after_fn.csv  catboost_metrics.json  catboost_per_class.csv  feature_columns.json  final_manifest.json  lightgbm_metrics.json  lightgbm_per_class.csv  logistic_regression_metrics.json  logistic_regression_per_class.csv  metrics.json  mlp_metrics.json  mlp_per_class.csv  random_forest_metrics.json  random_forest_per_class.csv  report.md  stacking_metrics.json  stacking_per_class.csv  threshold_tradeoff.csv  xgboost_metrics.json  xgboost_per_class.csv
results/local_300k_70_30/: bundle_manifest.json  catboost_metrics.json  catboost_per_class.csv  feature_columns.json  lightgbm_metrics.json  lightgbm_per_class.csv  logistic_regression_metrics.json  logistic_regression_per_class.csv  metrics.json  mlp_metrics.json  mlp_per_class.csv  random_forest_metrics.json  random_forest_per_class.csv  red_team.json  report.md  stacking_metrics.json  stacking_per_class.csv  xgboost_metrics.json  xgboost_per_class.csv
results/smoke/: feature_columns.json  lightgbm_metrics.json  lightgbm_per_class.csv  metrics.json  random_forest_metrics.json  random_forest_per_class.csv  report.md  xgboost_metrics.json  xgboost_per_class.csv
scripts/: build_guides.py  dgx_preflight.py  dgx_train.sbatch  fast_eda_from_cache.py  fast_explain.py  fast_preprocess_from_cache.py  gen_cicids_mock.py  gen_hard_mock.py  generate_sample.py  generate_summary_image.py  promote_best_models.py  recalibrate_balanced_thresholds.py
src/: __init__.py
src/artifacts/: __init__.py  bundle.py  (+2 more)
tests/: conftest.py  test_api_security.py  test_artifact_bundle.py  test_checkpoints.py  test_config.py  test_data_loader.py  test_deterministic_split.py  test_dgx_preflight.py  test_eda.py  test_evaluation.py  test_features.py  test_inference_parity.py  test_models.py  test_preprocessing.py  test_security.py  test_train_imbalance.py  test_utils.py
web/: .gitignore  next_out.txt  package-lock.json  package.json  tailwind.config.ts
(+95 files in other folders)
